@@ -1,3 +1,10 @@
+2006-06-12  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/FractalExplorer/Dialogs.c
+	* plug-ins/FractalExplorer/FractalExplorer.[ch]: applied patch from
+	Joao S. O. Bueno Calligaris that makes the plug-in work on grayscale
+	images and makes it override the alpha channel (bug #340771).
+
 2006-06-12  Tor Lillqvist  <tml@novell.com>
 
 	* app/plug-in/gimpenvirontable.c (gimp_environ_table_populate):
